--- a/requirements.txt
+++ b/requirements.txt
@@ -17,16 +17,16 @@ scipy
 
 # Optional: For enhanced functionality (if available)
 # Note: These may not be available on all platforms
-# dnachisel>=3.2.0
-# deepchem>=2.7.0
-# openmm>=7.7.0
-# scanpy>=1.9.0
-# squidpy>=1.2.0
-# rdkit>=2022.9.0
-# mhcflurry>=2.0.0
-# ont-fast5-api>=4.1.0
-# h5py>=3.8.0
-# scikit-allel>=1.3.0
+dnachisel
+deepchem
+openmm
+scanpy
+squidpy
+rdkit
+mhcflurry
+ont-fast5-api
+h5py
+scikit-allel
 
 # System utilities
 requests
